* Changed shadowjar to assemble

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ cache:
 
 build:
   stage: build
-  script: gradle --build-cache --full-stacktrace shadowJar
+  script: gradle --build-cache --full-stacktrace assemble
 
 test:
   stage: test
