--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,43 @@
 plugins {
-    id 'com.gradle.plugin-publish' version '0.10.1'
-    id "java-gradle-plugin"
     id "maven"
     id "jacoco"
+    id "java-gradle-plugin"
+    id 'com.gradle.plugin-publish' version '0.10.1'
 }
 
-group = "com.elypia.commandler"
-version = "1.0.1"
+group = "org.elypia.commandler"
+version = "1.2.0"
 description = "Commandler is a abstract command handling framework for dispatching events."
 sourceCompatibility = 11
 targetCompatibility = 11
 
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+ext {
+    commandlerVersion = "4.0.0"
+}
+
+[compileJava, compileTestJava, javadoc]*.options*.encoding = "UTF-8"
 
 repositories {
-    jcenter()
     mavenLocal()
+    jcenter()
 }
 
 dependencies {
     // Commandler
-    implementation "com.elypia.commandler:core:4.0.0"
-    implementation "com.elypia.commandler:doc:4.0.0"
+    implementation "org.elypia.commandler:core:${commandlerVersion}"
+    implementation "org.elypia.commandler:doc:${commandlerVersion}"
 
-    // GSON
-    implementation "com.google.code.gson:gson:2.8.5"
+    // Logging
+    implementation "org.slf4j:slf4j-api:1.7.29"
+    runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
 
     // Testing
-    testImplementation "org.junit.jupiter:junit-jupiter:5.4.2"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
+    testImplementation "org.mockito:mockito-core:3.2.0"
 }
 
 /** Testing */
+
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
@@ -41,9 +48,14 @@ test {
 }
 
 /** Code Coverage */
+
+jacoco {
+    toolVersion = "0.8.5"
+}
+
 jacocoTestReport {
     reports {
-        html.enabled = false
+        html.enabled = true
         xml.enabled = false
     }
 }
@@ -52,17 +64,17 @@ jacocoTestReport {
 gradlePlugin {
     plugins {
         commandler {
-            id = 'com.elypia.commandler'
+            id = 'org.elypia.commandler'
             displayName = 'Commandler Gradle Plugin'
             description = 'Perform pre/post compilation steps with Commandler as build steps rather than in runtime.'
-            implementationClass = 'com.elypia.commandler.CommandlerPlugin'
+            implementationClass = 'org.elypia.commandler.CommandlerPlugin'
         }
     }
 }
 
 /** Publish Gradle Plugin */
 pluginBundle {
-    website = 'https://elypia.com/'
+    website = 'https://elypia.org/'
     vcsUrl = 'https://gitlab.com/Elypia/commandler-gradle-plugin'
     tags = ['commandler', 'gradle', 'java']
 }
